--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -10,5 +10,12 @@
   <%= @person.last_name %>
 </p>
 
+<p>
+  <strong>Phone Number:</strong>
+  <% @person.phone_numbers.map do |x| %>
+        <%= x.number %>
+    <% end %>
+</p>
+
 <%= link_to 'Edit', edit_person_path(@person) %> |
 <%= link_to 'Back', people_path %>
